--- a/index.html
+++ b/index.html
@@ -85,19 +85,20 @@
                     <span class="timestamp"><span>4:54</span> <i id="10"
                             class="fa-regular songItemplay fa-2x fa-circle-play"></i></span>
                 </div>
-                <div class="songBanner">
-                    <img src="cover1.jpg" alt="" width="40px" id="songBannerImg">
-                    <img src="playing.gif" alt="Music playing animation" width="44px" id="gif">
-                    <div class="songInfo">
-                        <span id="currSong">Please choose a song to play</span>
-                    </div>
-                </div>
             </div>
-
         </div>
-
+        <!-- one changes here -->
+        <div class="songBanner">
+            <img src="cover1.jpg" alt="" width="40px" id="songBannerImg">
+            <img src="playing.gif" alt="Music playing animation" width="44px" id="gif">
+            <div class="songInfo">
+                <span id="currSong">Please choose a song to play</span>
+            </div>
+        </div>
     </div>
-    <div class="bottom glass">
+
+    <!-- secodn changes here -->
+    <footer class="bottom glass">
         <input type="range" name="range" id="SongProgressBar" value="0" min="0" max="100">
         <div class="icons">
             <span id="start-point"></span>
@@ -107,7 +108,7 @@
             <span id="end-point"></span>
         </div>
 
-    </div>
+    </footer>
     <script src="https://kit.fontawesome.com/e850630278.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
